add user management

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,3 +24,5 @@ scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
 play.modules.enabled += "scalikejdbc.PlayModule"
 # scalikejdbc.PlayModule doesn't depend on Play's DBModule
 play.modules.disabled += "play.api.db.DBModule"
+
+play.filters.headers.contentSecurityPolicy=null
